@@ -1,6 +1,14 @@
 2007-03-02  Ray Strode  <rstrode@redhat.com>
 
 	Patch from 
+	Paolo Borelli <pborelli@katamail.com>
+
+	* gconf/gconf.c (gconf_clear_cache):
+	Drop dead code (coverity 2208, bug 341724)
+
+2007-03-02  Ray Strode  <rstrode@redhat.com>
+
+	Patch from 
 	Narayana Pattipati <narayana.pattipati@wipro.com>
 
 	* backends/markup-tree.c (save_tree):
